IE8 weird layout bug

--- a/public/telling/website/css/base.css
+++ b/public/telling/website/css/base.css
@@ -550,7 +550,7 @@ footer {clear:both}
 		 -moz-border-radius: 1em;
 	-webkit-border-radius: 1em;
 					border-radius: 1em;
-	width: 30%; max-width: 200px;
+	width: 30%; max-width: 200px; max-height: 200px;
 	position:absolute; top:0; left:0;
 }
 
